Kinda fixed videos overflow

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -16,7 +16,7 @@ body {
 
 main {
     display: flex;
-    overflow-x: hidden;
+    // overflow-x: hidden;
 }
 
 header {
