--- a/styles/index.scss
+++ b/styles/index.scss
@@ -14,6 +14,7 @@
         justify-content: space-evenly;
         align-items: center;
         overflow-x: hidden;
+        overflow-y: hidden;
 
         @media only screen and (max-width: 1600px) {
             align-items: stretch;
@@ -43,6 +44,7 @@
 
 .sideNav-videos {
     width: 100%;
+    overflow-x: hidden;
 }
 
 .animate {
@@ -59,9 +61,9 @@
 
     &__card {
         height: 289px;
-        width: 19%;
+        width: 300px;
         margin-bottom: 20px;
-        margin-left: 2px;
+        margin-right: 4px;
         border-radius: 20px;
         cursor: pointer;
 
@@ -116,7 +118,8 @@
 }
 
 .big-margin {
-    margin-left: 250px;
+    box-sizing: border-box;
+    padding-left: 250px;
 }
 
 
